# yeet-repo

./: .gptignore  Cargo.toml  README.md
src/: main.rs
