[package]
name = "yeet-repo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
globwalk = "0.8"
wildmatch = "2.1.1"

[profile.release]
strip = true
lto = true
codegen-units = 1